# hacker-rank

./: README.md  pyproject.toml  requirements.txt
document-classification/: .gitignore  README.md  input.txt  input2.txt  main.py
markov-snakes-and-ladders/: README.md  main.py
predict-the-web-traffic/: README.md  investigate.ipynb  main.py
temperature-predictions/: README.md  input.txt  investivate.ipynb  main.py
the-best-aptitude-test/: README.md  main.py
