[project]
name = "priv-hacker-rank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.ruff]
select = ["ALL"]
ignore = [
    "D",  # docstring がなくても警告しない
    "T201",  # print() を許可
    "ERA001",  # コメントアウトされたコードを許可
]
